# Zaiguard-Connected

./: INTEGRATION_GUIDE.md  README.md  REDUNDANT_RESOURCES.md
FL-Project/: README.md  commands.md  pyproject.toml  workDone.md
FL-Project/src/fl/: client_app.py  server_app.py
FL-Project/src/fl/embeddings_demp/: client_app_embeddings.py  server_app_embeddings.py
FL-Project/src/fl/tasks/: classification.py  classification_cifar10.py  classification_embeddings.py  classification_embeddings_prox.py
FL-Project/src/fl/zaiguard_fedprox_demo/: client_app.py  server_app.py
ZAIgaurd-alert-engine/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ZaiGuard_Alert_Engine_Architecture.md  docker-compose.yml  main.py  middleware.py  pipeline.py  pyrefly.toml  pytest.ini  requirements.txt
ZAIgaurd-alert-engine/config/: database.py  logging.py  settings.py  thresholds.py
ZAIgaurd-alert-engine/feedback/: handler.py
ZAIgaurd-alert-engine/layers/: dedup.py  enrichment.py  threshold_gate.py  tiering.py
Zaiguard-Prototype/: .env.example  .gitignore  FUTURE_IMPLEMENTATION_GUIDE.md  README.md  main.py  pyproject.toml  remainingShikhar.md
Zaiguard-Prototype/classifiers/: base_classifier.py  unauth_access.py
Zaiguard-Prototype/config/: cameras.example.yaml  cameras.yaml  schedules.yaml  thresholds.yaml
Zaiguard-Prototype/core/: config_loader.py  logger.py  packets (1).py  packets.py  pipeline.py  queue_bus.py
Zaiguard-Prototype/federated/: FL_INTEGRATION_PLAN.md
Zaiguard-Prototype/inference/: backbone.py  classifier_runner.py
Zaiguard-Prototype/ingestion/: frame_sampler.py  rtsp_reader.py  source_resolver.py
Zaiguard-Prototype/postproc/: alert_engine_client.py  alerter.py  deduplicator.py  preview.py  storage_cleanup.py
Zaiguard-Prototype/tests/: test_alert_engine_client.py  test_config_loader.py  test_source_resolver.py  test_unauth_access.py
Zaiguard-Prototype/tools/: download_test_videos.py  export_onnx.py  stream_test.py
Zaiguard-Prototype/tools/mediamtx/: docker-compose.yml  mediamtx.yml
(+21 files in other folders)
